--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,18 @@ body {
   color: #0000FF;
 }
 
+body {
+  font-size: 16px;
+}
+
+h1 {
+  font-size: 2em;
+}
+
+p {
+  font-size: 100%;
+}
+
 nav {
   background-color: rgba(0,0,0,.5);
   float: left;
