--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-  background-color: #ff0000;
+  background-color: #ffffff;
   color: #0000FF;
 }
 
@@ -61,4 +61,21 @@ article {
 .container {
   margin: 0 auto;
   width: 50%;
+}
+
+a {
+  text-decoration: none;
+}
+
+a:link { 
+  color:#0070BB; 
+}
+a:visited { 
+  color:#0070BA; 
+}
+a:hover { 
+  color:#0070BC; 
+}
+a:active { 
+  color:#0070BD; 
 }
