--- a/css/style.css
+++ b/css/style.css
@@ -4,15 +4,25 @@ body {
 }
 
 body {
-  font-size: 16px;
+  font-family: sans-serif;
+  color: black;
+}
+
+figcaption {
+  font-size: 14px
 }
 
 h1 {
-  font-size: 2em;
+  font-size: 48px;
+  color: black;
+  font-family: sans-serif;
 }
 
 p {
+  line-height: 1.5em;
   font-size: 100%;
+  font-family: sans-serif;
+  color: black;
 }
 
 nav {
@@ -67,15 +77,15 @@ a {
   text-decoration: none;
 }
 
-a:link { 
-  color:#0070BB; 
+a:link {
+  color:#0070BB;
 }
-a:visited { 
-  color:#0070BA; 
+a:visited {
+  color:#0070BA;
 }
-a:hover { 
-  color:#0070BC; 
+a:hover {
+  color:#0070BC;
 }
-a:active { 
-  color:#0070BD; 
+a:active {
+  color:#0070BD;
 }
